policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - myapp
      validate:
        message: "Les conteneurs doivent tourner en non-root."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
